--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=TimeSlotSpreadSheet
+spring.application.name=time_slot_spreadsheet
 
 server.port=8023
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TimeSlotSpreadSheet
+spring.datasource.url=jdbc:postgresql://localhost:5432/time_slot_spreadsheet
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
